# ws-lidar-as-camera-odom

./: .gitignore  .gitmodules  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
detector_descriptor_for_LiDARimg/: README.md
detector_descriptor_for_LiDARimg/Dataset/: image_subscriber.py
detector_descriptor_for_LiDARimg/evaluation/superpoint_method/: Superpoint.csv  Superpoint_cuda.csv  superpoint_evaluation.py
detector_descriptor_for_LiDARimg/evaluation/traditional_method/: CMakeLists.txt
detector_descriptor_for_LiDARimg/evaluation/traditional_method/csv/: AKAZE_AKAZE.csv  BRISK_BRIEF.csv  BRISK_BRISK.csv  BRISK_FREAK.csv  BRISK_SIFT.csv  BRISK_SURF.csv  FAST_BRIEF.csv  FAST_BRISK.csv  FAST_FREAK.csv  FAST_SIFT.csv  FAST_SURF.csv  HARRIS_BRIEF.csv  HARRIS_BRISK.csv  HARRIS_FREAK.csv  HARRIS_SIFT.csv  HARRIS_SURF.csv  ORB_ORB.csv  SHITOMASI_BRIEF.csv  SHITOMASI_BRISK.csv  SHITOMASI_FREAK.csv  SHITOMASI_SIFT.csv  SHITOMASI_SURF.csv  SIFT_BRIEF.csv  SIFT_BRISK.csv  SIFT_FREAK.csv  SIFT_SIFT.csv  SIFT_SURF.csv  SURF_BRIEF.csv  SURF_BRISK.csv  SURF_SIFT.csv  SURF_SURF.csv
detector_descriptor_for_LiDARimg/evaluation/traditional_method/src/: matching2D.hpp  matching2D_.cpp  perfermance_comparison.cpp
detector_descriptor_for_LiDARimg/preprocess/draw_table/: Draw_table_interpolations.py  Draw_table_size.py  table_about_interpolation.csv  table_about_size.csv
detector_descriptor_for_LiDARimg/preprocess/src/: matching2D.hpp  matching2D_.cpp  perfermance_comparison.cpp
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
devel/.private/kiss_icp/: .catkin  .rosinstall  setup.sh
devel/.private/kiss_icp/lib/kiss_icp/: odometry_node
devel/.private/kiss_icp/lib/pkgconfig/: kiss_icp.pc
devel/.private/kiss_icp/share/kiss_icp/cmake/: kiss_icpConfig.cmake
devel/.private/signal-image-keypoints-odom/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/signal-image-keypoints-odom/lib/pkgconfig/: signal-image-keypoints-odom.pc
devel/.private/signal-image-keypoints-odom/lib/signal-image-keypoints-odom/: signal_image_keypoints_odom_node
devel/.private/signal-image-keypoints-odom/share/signal-image-keypoints-odom/cmake/: signal-image-keypoints-odomConfig.cmake
devel/lib/kiss_icp/: odometry_node
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  kiss_icp.pc  signal-image-keypoints-odom.pc
devel/lib/signal-image-keypoints-odom/: signal_image_keypoints_odom_node
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/kiss_icp/cmake/: kiss_icpConfig-version.cmake  kiss_icpConfig.cmake
devel/share/signal-image-keypoints-odom/cmake/: signal-image-keypoints-odomConfig-version.cmake  signal-image-keypoints-odomConfig.cmake
launch/: signal-feature-odom.launch
logs/signal-image-keypoints-odom/: build.cmake.000.log.stderr  build.make.000.log.stderr
scripts/: cpu_mem.py  cpu_mem2.py  plot_cpu_mem.py
src/: signal_image_keypoints_odom.cpp
src/signal-image-keypoints-odom/: CMakeLists.txt  package.xml
src/signal-image-keypoints-odom/include/signal_image_keypoints_odom/: signal_image_keypoints_odom.hpp
src/signal-image-keypoints-odom/include/superpoint/: NetWork.hpp  PointTracker.hpp  SuperPointFrontend.hpp
src/signal-image-keypoints-odom/script/: string_msg_read.py  test.py
src/signal-image-keypoints-odom/src/: signal_image_keypoints_odom.cpp  signal_image_keypoints_odom_node.cpp
src/signal-image-keypoints-odom/src/superpoint/: CMakeLists.txt  NetWork.cpp  PointTracker.cpp  SuperPointFrontend.cpp  test.cpp
src/signal-image-keypoints-odom/src/superpoint/include/superpoint/: NetWork.hpp  PointTracker.hpp  SuperPointFrontend.h  SuperPointFrontend.hpp
src/signal-image-keypoints-odom/src/superpoint/src/: NetWork.cpp  PointTracker.cpp  SuperPointFrontend.cpp
src/signal-image-keypoints-odom/superpoint_extractors/: diff_sig_ran.py  superpoint_evaluation.py  superpoint_keypoint.py
